fixed modal select overflow

--- a/frontend/src/app/shared/components/modal/modal.component.css
+++ b/frontend/src/app/shared/components/modal/modal.component.css
@@ -30,6 +30,7 @@
   border-color: black;
   border-style: solid;
   border-width: 2px;
+  overflow: hidden;
 }
 
 .actions {
@@ -45,6 +46,10 @@
   font-weight: bold;
   display: flex;
   justify-content: center;
+}
+
+.body{
+  overflow: auto;
 }
 
 .close {
